testsuite/tests/parser/should_fail/NoNumericUnderscores.stderr

NoNumericUnderscores.hs:10:1: error:
    Equations for ‘f’ have different numbers of arguments
      NoNumericUnderscores.hs:10:1-12
      NoNumericUnderscores.hs:11:1-10
